--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <form id="ageForm">
-      <header>
+      <header class="error-header">
         <div class="layout">
           <h1>Day</h1>
           <input type="text" placeholder="DD" class="input">
