--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <form id="ageForm">
-      <header class="error-header">
+      <header>
         <div class="layout">
           <h1>Day</h1>
           <input type="text" placeholder="DD" class="input">
@@ -37,7 +37,7 @@
       </header>
       <section class="img-style">
         <div class="vertical"></div>
-        <button type="submit" id="calculateButton">
+        <button type="button" id="calculateButton">
           <img src="assets/images/icon-arrow.svg" alt="icon-arrow">
         </button>
       </section>
