--- a/index.html
+++ b/index.html
@@ -4,55 +4,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <!-- Display the site properly based on the user's device -->
 
+  <!-- Link to the main CSS file -->
   <link rel="stylesheet" href="css/main.css">
 
+  <!-- Favicon for the site -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Age calculator app</title>
 
 </head>
 
 <body>
+  <!-- Main content container -->
   <main>
+    <!-- Form for age calculation -->
     <form id="ageForm">
+      <!-- Header section with input fields for day, month, and year -->
       <header>
         <div class="layout">
           <h1>Day</h1>
           <input type="text" placeholder="DD" class="input">
-
         </div>
 
         <div class="layout">
           <h1>Month</h1>
           <input type="text" placeholder="MM" class="input">
-
         </div>
 
         <div class="layout">
           <h1>Year</h1>
           <input type="text" placeholder="YYYY" class="input">
-
         </div>
       </header>
+
+      <!-- Image and button section for age calculation -->
       <section class="img-style">
         <div class="vertical"></div>
         <button type="button" id="calculateButton">
           <img src="assets/images/icon-arrow.svg" alt="icon-arrow">
         </button>
       </section>
+
+      <!-- Display section for calculated age -->
       <section>
         <h2><span>--</span> years</h2>
         <h2><span>--</span> months</h2>
         <h2><span>--</span> days</h2>
-
       </section>
     </form>
   </main>
+
+  <!-- Attribution and credits section -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://kerdaino.github.io/portfolio/" target="_blank">Tobi Adekunle(kerdainodev)</a>.
   </div>
+
+  <!-- Link to the main JavaScript file with the 'defer' attribute -->
   <script src="js/main.js" defer></script>
 </body>
 
